--- a/backend/src/main/webapp/app/views/working/tab_cal.html
+++ b/backend/src/main/webapp/app/views/working/tab_cal.html
@@ -13,43 +13,45 @@
 				        <div class="panel-heading text-right">ส่วนลด</div>
 				        <div class="panel-body" style="min-height: 150px;">
 				        	<div class="col-xs-9" style="padding-left: 0;">
-				        	
-				        		
 				        		<div class="panel panel-info" style="margin-bottom: 3px	!important;">
 									<div class="panel-body" style="padding-left: 6px; padding-right: 6px;">
-							
-						            	{{ discount.balanceHeader.columnNameAlias || discount.balanceHeader.columnName }} : <b>{{ taskDetailPerm['OS LEGAL/LOSS'] | number:2 }}</b>
-						            	
-						            	<div ng-repeat="op in discount.operators track by $index">
-						            		<div class="form-group input-group" style="margin: 3px 0 3px 0;">
-											   	<span class="input-group-addon" style="width: 40px;"><b>{{ op.sign }}</b></span>
-											    <input type="number" class="form-control input-sm" dir="rtl" ng-model="op.val" ng-keyup="discount.observeOperator()" set-focus="$last">
-											    <span class="input-group-addon"><i class="fa fa-times" style="color: red; cursor: pointer;" ng-click="discount.deleteOperator($index)"></i></span>
-											</div>
-						            	</div>
-				            	
-						            	<div ng-show="discount.operators.length > 0" style="color: red;">
-						            		<u>{{ discount.balanceHeader.columnNameAlias || discount.balanceHeader.columnName }}</u> : <b>{{ discount.finalBalance | number:2 }}</b>
-						            	</div>
-						            	
-						            	<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						            		ยอดลด : <span ng-show="discount.reqVal > 0">{{ discount.loss | number:2  }}</span>
-						            	</div>
-						            	
-						            	<div ng-show="discount.calType == 1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						            		ส่วนลด : <b><span ng-show="discount.reqVal > 0" class="badge result-cal">{{ discount.cusDiscount | number:2 }}%</span></b>
-						            	</div>
-						            	<div ng-show="discount.calType == 2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						            		ยอดชำระ : <span ng-show="discount.reqVal > 0" class="badge result-cal">{{ discount.cusDiscount | number:2 }}</span>
-						            	</div>
+										<table style="width: 100%;">
+											<tr>
+												<td style="text-align: right; width: 30%;">{{ discount.balanceHeader.columnNameAlias || discount.balanceHeader.columnName }}&nbsp;:&nbsp;</td>
+												<td style="width: 70%;"><strong>{{ taskDetailPerm[discount.balanceHeader.columnName] | number:2 }}</strong></td>
+											</tr>
+											<tr>
+												<td colspan="2" style="text-align: right;">
+													<div ng-repeat="op in discount.operators track by $index">
+									            		<div class="form-group input-group col-xs-12" style="margin: 3px 0 3px 0;">
+														   	<span class="input-group-addon" style="width: 40px;"><strong>{{ op.sign }}</strong></span>
+														    <input type="number" class="form-control input-sm" ng-model="op.val" ng-keyup="discount.observeOperator()" set-focus="$last">
+														    <span class="input-group-addon"><i class="fa fa-times" style="color: red; cursor: pointer;" ng-click="discount.deleteOperator($index)"></i></span>
+														</div>
+									            	</div>
+												</td>
+											</tr>
+											<tr ng-show="discount.operators.length > 0" style="color: red;">
+												<td style=" text-align: right;"><u>{{ discount.balanceHeader.columnNameAlias || discount.balanceHeader.columnName }}</u>&nbsp;:&nbsp;</td>
+												<td><strong>{{ discount.finalBalance | number:2 }}</strong></td>
+											</tr>
+											<tr>
+												<td style="text-align: right;">ยอดลด&nbsp;:&nbsp;</td>
+												<td><span ng-show="discount.reqVal > 0">{{ discount.loss | number:2  }}</span></td>
+											</tr>
+											<tr ng-show="discount.calType == 1">
+												<td style="text-align: right;">ส่วนลด&nbsp;:&nbsp;</td>
+												<td><strong><span ng-show="discount.reqVal > 0" class="badge result-cal">{{ discount.cusDiscount | number:2 }}%</span></strong></td>
+											</tr>
+											<tr ng-show="discount.calType == 2">
+												<td style="text-align: right;">ยอดชำระ&nbsp;:&nbsp;</td>
+												<td><span ng-show="discount.reqVal > 0" class="badge result-cal">{{ discount.cusDiscount | number:2 }}</span></td>
+											</tr>
+										</table>
 									</div>
 								</div>
-																
 								<div class="panel panel-info" style="margin-bottom: 0 !important;">
 									<div class="panel-body" style="padding: 6px;">
-									
-									
-									
 										<div class="input-group">
 									    	<div class="input-group-btn">
 										    	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">{{ discount.calType == '1' ? 'ยอดชำระ' : 'เปอร์เซ็นชำระ' }} <span class="caret"></span></button>
@@ -58,24 +60,17 @@
 										          <li><a href="" ng-click="discount.calType = 2;discount.reqVal = null">เปอร์เซ็นชำระ</a></li>
 										        </ul>
 										    </div>
-									    	<input type="number" class="form-control" dir="rtl" ng-model="discount.reqVal" ng-keyup="discount.cal()">
+									    	<input type="number" class="form-control" ng-model="discount.reqVal" ng-keyup="discount.cal()">
 									    	<span class="input-group-addon" ng-show="discount.calType == 1"><i class="fa fa-btc"></i></span>
 									    	<span class="input-group-addon" ng-show="discount.calType == 2">%</span>
 									    </div>
-									
-									
-									
 									</div>
 								</div>
-				            	
 				        	</div>
 					        <div class="col-xs-3">
 					        	<div class="pull-right row">
-					        	
-					        	
 						        	<div class="panel panel-info">
 										<div class="panel-body" style="padding: 6px;">
-											
 							        		<div>
 									            <img class="img-thumbnail" width="30" ng-src="{{ discount.plusIcon }}" title="บวก" style="cursor: pointer;" ng-click="discount.addOperator('+', '+')">
 									            <img class="img-thumbnail" width="30" ng-src="{{ discount.multiplyIcon }}" title="คูณ" style="cursor: pointer;" ng-click="discount.addOperator('*', '×')">
@@ -84,11 +79,8 @@
 									            <img class="img-thumbnail" width="30" ng-src="{{ discount.minusIcon }}" title="ลบ" style="cursor: pointer;" ng-click="discount.addOperator('-', '-')">
 									            <img class="img-thumbnail" width="30" ng-src="{{ discount.divideIcon }}" title="หาร" style="cursor: pointer;" ng-click="discount.addOperator('/', '÷')">
 							        		</div>
-							        		
 										</div>
 									</div>
-									
-									
 					        	</div>
 					        </div>
 				        </div>
