--- a/backend/src/main/webapp/app/views/working/tab_cal.html
+++ b/backend/src/main/webapp/app/views/working/tab_cal.html
@@ -6,21 +6,21 @@
 
 <div class="row">
 	<div class="col-xs-12">
-	    <div class="well" style="padding: 5px;">
+	    <div class="well" style="padding: 3px;">
 	    	<div class="row">
 				<div class="col-xs-6">
-				    <div class="panel panel-info">
+				    <div class="panel panel-info" style="margin-bottom: 0;">
 				        <div class="panel-heading text-right">ส่วนลด</div>
-				        <div class="panel-body" style="min-height: 150px;">
+				        <div class="panel-body">
 				        	<div class="col-xs-9" style="padding-left: 0;">
 				        		<div class="panel panel-info" style="margin-bottom: 3px	!important;">
-									<div class="panel-body" style="padding-left: 6px; padding-right: 6px;">
+									<div class="panel-body" style="padding-left: 6px; padding-right: 6px; min-height: 120px; background-color: #d9edf7">
 										<table style="width: 100%;">
 											<tr>
-												<td style="text-align: right; width: 30%;">{{ discount.balanceHeader.columnNameAlias || discount.balanceHeader.columnName }}&nbsp;:&nbsp;</td>
+												<td style="text-align: right; width: 30%;"><strong>{{ discount.balanceHeader.columnNameAlias || discount.balanceHeader.columnName }}&nbsp;:&nbsp;</strong></td>
 												<td style="width: 70%;"><strong>{{ taskDetailPerm[discount.balanceHeader.columnName] | number:2 }}</strong></td>
 											</tr>
-											<tr>
+											<tr ng-show="discount.operators.length > 0">
 												<td colspan="2" style="text-align: right;">
 													<div ng-repeat="op in discount.operators track by $index">
 									            		<div class="form-group input-group col-xs-12" style="margin: 3px 0 3px 0;">
@@ -32,20 +32,20 @@
 												</td>
 											</tr>
 											<tr ng-show="discount.operators.length > 0" style="color: red;">
-												<td style=" text-align: right;"><u>{{ discount.balanceHeader.columnNameAlias || discount.balanceHeader.columnName }}</u>&nbsp;:&nbsp;</td>
+												<td style=" text-align: right;"><strong>{{ discount.balanceHeader.columnNameAlias || discount.balanceHeader.columnName }}</strong>&nbsp;:&nbsp;</td>
 												<td><strong>{{ discount.finalBalance | number:2 }}</strong></td>
 											</tr>
 											<tr>
-												<td style="text-align: right;">ยอดลด&nbsp;:&nbsp;</td>
-												<td><span ng-show="discount.reqVal > 0">{{ discount.loss | number:2  }}</span></td>
+												<td style="text-align: right;"><strong>ยอดลด&nbsp;:&nbsp;</strong></td>
+												<td><span ng-show="discount.reqVal > 0">{{ discount.loss | number:2  }}&nbsp;(-)</span></td>
 											</tr>
 											<tr ng-show="discount.calType == 1">
-												<td style="text-align: right;">ส่วนลด&nbsp;:&nbsp;</td>
-												<td><strong><span ng-show="discount.reqVal > 0" class="badge result-cal">{{ discount.cusDiscount | number:2 }}%</span></strong></td>
+												<td style="text-align: right;"><strong>ส่วนลด&nbsp;:&nbsp;</strong></td>
+												<td><span ng-show="discount.reqVal > 0" class="badge result-cal"><strong>{{ discount.cusDiscount | number:2 }}%</strong></span></td>
 											</tr>
 											<tr ng-show="discount.calType == 2">
-												<td style="text-align: right;">ยอดชำระ&nbsp;:&nbsp;</td>
-												<td><span ng-show="discount.reqVal > 0" class="badge result-cal">{{ discount.cusDiscount | number:2 }}</span></td>
+												<td style="text-align: right;"><strong>ยอดชำระ&nbsp;:&nbsp;</strong></td>
+												<td><span ng-show="discount.reqVal > 0" class="badge result-cal"><strong>{{ discount.cusDiscount | number:2 }}</strong></span></td>
 											</tr>
 										</table>
 									</div>
