--- a/backend/src/main/webapp/app/views/working/tab_cal.html
+++ b/backend/src/main/webapp/app/views/working/tab_cal.html
@@ -15,7 +15,7 @@
 				        	<div class="col-xs-9" style="padding-left: 0;">
 				        		<div class="panel panel-info" style="margin-bottom: 3px	!important;">
 									<div class="panel-body" style="padding-left: 6px; padding-right: 6px; min-height: 120px; background-color: #d9edf7">
-										<table style="width: 100%;">
+										<table style="width: 100%; color: black;">
 											<tr>
 												<td style="text-align: right; width: 30%;"><strong>{{ discount.balanceHeader.columnNameAlias || discount.balanceHeader.columnName }}&nbsp;:&nbsp;</strong></td>
 												<td style="width: 70%;"><strong>{{ taskDetailPerm[discount.balanceHeader.columnName] | number:2 }}</strong></td>
