--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -116,7 +116,7 @@
 					 </span> -->
 					 <span ng-class="{label: f.colorBg}" 
 					 	   style="display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;overflow: hidden;text-overflow: ellipsis; text-align: left;"
-					       ng-style="f.colorBg ? {'color': f.colorFont, 'background-color': f.colorBg, 'font-size': '13px', 'padding-top': '5px'} : f.colorFont ? {'color': f.colorFont} : '' ">
+					       ng-style="f.colorBg ? {'color': f.colorFont, 'background-color': f.colorBg, 'font-size': '13px', 'padding-top': '5px', 'min-height': '25px'} : f.colorFont ? {'color': f.colorFont} : '' ">
 					   {{ 
 						   f.dataType == 'sys_owner' ? detail[f.columnName][0].showname :
 						   f.dataType == 'date' ? (detail[f.columnName] | date:gb_dateFormat) : 
