--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -114,16 +114,18 @@
 						 	f.dataType == 'sys_owner' ? detail[f.columnName][0].showname : ''
 						 }}
 					 </span> -->
-					 <span ng-class="{label: f.colorBg}" 
-					 	   style="display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;overflow: hidden;text-overflow: ellipsis; text-align: left;"
-					       ng-style="f.colorBg ? {'color': f.colorFont, 'background-color': f.colorBg, 'font-size': '13px', 'padding-top': '5px', 'padding-bottom': '0', 'min-height': '25px'} : f.colorFont ? {'color': f.colorFont} : '' ">
-					   {{ 
-						   f.dataType == 'sys_owner' ? detail[f.columnName][0].showname :
-						   f.dataType == 'date' ? (detail[f.columnName] | date:gb_dateFormat) : 
-						   f.dataType == 'num' ? (detail[f.columnName] | number:2) : detail[f.columnName] 
-						}}
-					 </span>
 					 
+				     <div style="display: inline-block;">
+						 <span ng-class="{label: f.colorBg}" 
+						 	   style="display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;overflow: hidden;text-overflow: ellipsis; text-align: left;"
+						       ng-style="f.colorBg ? {'color': f.colorFont, 'background-color': f.colorBg, 'font-size': '13px', 'padding-bottom': '0', 'min-height': '25px', 'line-height': '1.1'} : f.colorFont ? {'color': f.colorFont} : '' ">
+								   {{ 
+									   f.dataType == 'sys_owner' ? detail[f.columnName][0].showname :
+									   f.dataType == 'date' ? (detail[f.columnName] | date:gb_dateFormat) : 
+									   f.dataType == 'num' ? (detail[f.columnName] | number:2) : detail[f.columnName] 
+									}}
+						 </span>
+			       	 </div>
 				</div>
 			</div>
 			<div style="clear: both;"></div>
