--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -115,10 +115,10 @@
 						 }}
 					 </span> -->
 					 
-				     <div style="display: inline-block;">
+				     <div ng-style="f.colorBg ? {'display': 'inline-block'} : '' ">
 						 <span ng-class="{label: f.colorBg}" 
 						 	   style="display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;overflow: hidden;text-overflow: ellipsis; text-align: left;"
-						       ng-style="f.colorBg ? {'color': f.colorFont, 'background-color': f.colorBg, 'font-size': '13px', 'padding-bottom': '0', 'min-height': '25px', 'line-height': '1.1'} : f.colorFont ? {'color': f.colorFont} : '' ">
+						       ng-style="f.colorBg ? {'color': f.colorFont, 'background-color': f.colorBg, 'font-size': '13px', 'padding': '3px 5px 0px 3px', 'min-height': '25px', 'line-height': '1.1'} : f.colorFont ? {'color': f.colorFont} : '' ">
 								   {{ 
 									   f.dataType == 'sys_owner' ? detail[f.columnName][0].showname :
 									   f.dataType == 'date' ? (detail[f.columnName] | date:gb_dateFormat) : 
