--- a/backend/src/main/webapp/app/views/product/add.html
+++ b/backend/src/main/webapp/app/views/product/add.html
@@ -4,11 +4,18 @@
 			<label class="control-label">ชื่อโปรดักส์ *</label>
 			<input name="productName" class="form-control" ng-model="data.productName" required>
 		</div>
-		<div class="form-group" ng-class="{'has-error':addUserForm.productName.$invalid}">
+		<div class="form-group">
 			<label class="control-label">รอบการแจ้งเตือน (วันที่ติดตาม)</label>
-			<div class="form-group input-group" style="width: 150px;">
+			<div class="form-group input-group" style="width: 250px;">
 				<input type="text" class="form-control" placeholder="จำนวนวัน" ng-model="data.traceDateRoundDay">
 				<span class="input-group-addon">วัน</span>
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label">จำกัดจำนวนตัวอักษร</label>
+			<div class="form-group input-group" style="width: 250px;">
+				<input type="number" class="form-control" placeholder="จำนวนตัวอักษร" ng-model="data.textLength">
+				<span class="input-group-addon">ตัวอักษร</span>
 			</div>
 		</div>
 		<div class="form-group" ng-show="group0">
