--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -256,7 +256,8 @@
 						  <div class="row">
 							  <div class="form-group col-md-8" ng-class="{'has-error':saveAskModalForm.resultText.$invalid}">
 							    <label class="control-label">ผลการติดตาม</label>
-						  		<textarea name="resultText" class="form-control" style="resize: none;" rows="3" ng-model="askModalObj.trace.resultText" required></textarea>
+							    <label class="control-label pull-right">{{ askModalObj.init.maxlength == -1 ? askModalObj.init.currentlength : askModalObj.init.currentlength + '/' + askModalObj.init.maxlength }}</label>
+						  		<textarea name="resultText" maxlength="{{ askModalObj.init.maxlength }}" class="form-control" style="resize: none;" rows="3" ng-model="askModalObj.trace.resultText" required></textarea>
 							  </div>
 							  
 							  <div class="form-group col-md-4">
