--- a/backend/src/main/webapp/app/views/working/tab_cal.html
+++ b/backend/src/main/webapp/app/views/working/tab_cal.html
@@ -6,54 +6,62 @@
 
 <div class="row">
 	<div class="col-xs-12">
-	    <div class="well" style="padding: 3px;">
+	    <div class="well" style="padding: 3px; margin-bottom: 0;">
 	    	<div class="row">
 				<div class="col-xs-6">
 				    <div class="panel panel-info" style="margin-bottom: 0;">
 				        <div class="panel-heading text-right">ส่วนลด</div>
 				        <div class="panel-body">
-				        	<div class="col-xs-9" style="padding-left: 0;">
+				        	<div class="col-xs-10" style="padding-left: 0;">
 				        		<div class="panel panel-info" style="margin-bottom: 3px	!important;">
 									<div class="panel-body" style="padding-left: 6px; padding-right: 6px; min-height: 120px; background-color: #d9edf7">
-										<table style="width: 100%; color: black;">
-											<tr style="height: 25px;">
-												<td style="text-align: right; width: 30%;"><strong><u>{{ discount.balanceHeader.columnNameAlias || discount.balanceHeader.columnName }}</u>&nbsp;:&nbsp;</strong></td>
-												<td style="width: 70%;"><strong>{{ taskDetailPerm[discount.balanceHeader.columnName] | number:2 }}</strong></td>
-											</tr>
-											<tr ng-show="discount.operators.length > 0" style="height: 25px;">
-												<td colspan="2" style="text-align: right;">
-													<div ng-repeat="op in discount.operators track by $index">
-									            		<div class="form-group input-group col-xs-12" style="margin: 3px 0 3px 0;">
-														   	<span class="input-group-addon" style="width: 40px;"><strong>{{ op.sign }}</strong></span>
-														    <input type="number" class="form-control input-sm" ng-model="op.val" ng-keyup="discount.observeOperator()" set-focus="$last">
-														    <span class="input-group-addon"><i class="fa fa-times" style="color: red; cursor: pointer;" ng-click="discount.deleteOperator($index)"></i></span>
-														</div>
-									            	</div>
-												</td>
-											</tr>
-											<tr ng-show="discount.operators.length > 0" style="color: red; height: 25px;">
-												<td style=" text-align: right;"><strong>{{ discount.balanceHeader.columnNameAlias || discount.balanceHeader.columnName }}</strong>&nbsp;:&nbsp;</td>
-												<td><strong>{{ discount.finalBalance | number:2 }}</strong></td>
-											</tr>
-											<tr style="height: 25px;">
-												<td style="text-align: right;"><strong>ยอดลด&nbsp;:&nbsp;</strong></td>
-												<td><span ng-show="discount.reqVal > 0">{{ discount.loss | number:2  }}&nbsp;(-)</span></td>
-											</tr>
-											<tr ng-show="discount.calType == 1" style="height: 25px;">
-												<td style="text-align: right;"><strong>ส่วนลด&nbsp;:&nbsp;</strong></td>
-												<td><span ng-show="discount.reqVal > 0" class="badge result-cal"><strong>{{ discount.cusDiscount | number:2 }}%</strong></span></td>
-											</tr>
-											<tr ng-show="discount.calType == 2" style="height: 25px;">
-												<td style="text-align: right;"><strong>ยอดชำระ&nbsp;:&nbsp;</strong></td>
-												<td><span ng-show="discount.reqVal > 0" class="badge result-cal"><strong>{{ discount.cusDiscount | number:2 }}</strong></span></td>
-											</tr>
-											
-											<tr style="height: 25px;" ng-repeat="field in calParams.discountFields">
-												<td style="text-align: right;"><code>{{ field.fieldName }}&nbsp;:&nbsp;</code></td>
-												<td><code>{{ field.fieldResult | number:2 }}</code></td>
-											</tr>
-											
-										</table>
+										<div class="col-xs-6" style="padding: 0;">
+											<table style="width: 100%; color: black;">
+												<tr style="height: 25px;">
+													<td style="text-align: right; width: 50%; white-space: nowrap;"><strong><u>{{ discount.balanceHeader.columnNameAlias || discount.balanceHeader.columnName }}</u>&nbsp;:&nbsp;</strong></td>
+													<td style="width: 50%;"><strong>{{ taskDetailPerm[discount.balanceHeader.columnName] | number:2 }}</strong></td>
+												</tr>
+												<tr ng-show="discount.operators.length > 0" style="height: 25px;">
+													<td colspan="2" style="text-align: right;">
+														<div ng-repeat="op in discount.operators track by $index">
+										            		<div class="form-group input-group col-xs-12" style="margin: 3px 0 3px 0;">
+															   	<span class="input-group-addon" style="width: 40px;"><strong>{{ op.sign }}</strong></span>
+															    <input type="number" class="form-control input-sm" ng-model="op.val" ng-keyup="discount.observeOperator()" set-focus="$last">
+															    <span class="input-group-addon"><i class="fa fa-times" style="color: red; cursor: pointer;" ng-click="discount.deleteOperator($index)"></i></span>
+															</div>
+										            	</div>
+													</td>
+												</tr>
+												<tr ng-show="discount.operators.length > 0" style="color: red; height: 25px;">
+													<td style=" text-align: right;"><strong>{{ discount.balanceHeader.columnNameAlias || discount.balanceHeader.columnName }}</strong>&nbsp;:&nbsp;</td>
+													<td><strong>{{ discount.finalBalance | number:2 }}</strong></td>
+												</tr>
+												<tr style="height: 25px;">
+													<td style="text-align: right;"><strong>ยอดลด&nbsp;:&nbsp;</strong></td>
+													<td><span ng-show="discount.reqVal > 0">{{ discount.loss | number:2  }}&nbsp;(-)</span></td>
+												</tr>
+												<tr ng-show="discount.calType == 1" style="height: 25px;">
+													<td style="text-align: right;"><strong>ส่วนลด&nbsp;:&nbsp;</strong></td>
+													<td><span ng-show="discount.reqVal > 0" class="badge result-cal"><strong>{{ discount.cusDiscount | number:2 }}%</strong></span></td>
+												</tr>
+												<tr ng-show="discount.calType == 2" style="height: 25px;">
+													<td style="text-align: right;"><strong>ยอดชำระ&nbsp;:&nbsp;</strong></td>
+													<td><span ng-show="discount.reqVal > 0" class="badge result-cal"><strong>{{ discount.cusDiscount | number:2 }}</strong></span></td>
+												</tr>
+											</table>
+										</div>
+										<div class="col-xs-6" style="padding: 0;" ng-show="calParams.discountFields.length > 0">
+											<div class="panel panel-green" style="margin-bottom: 0 !important; border-color: #a0dbf9;">
+												<div class="panel-body" style="background-color: #b6dcef">
+													<table style="width: 100%; color: black; font-weight: 700;">
+														<tr style="height: 25px;" ng-repeat="field in calParams.discountFields">
+															<td style="width: 50%; text-align: right; white-space: nowrap;"><small>{{ field.fieldName }}&nbsp;:&nbsp;</small></td>
+															<td style="width: 50%;"><small>{{ field.fieldResult | number:2 }}</small></td>
+														</tr>
+													</table>
+												</div>
+											</div>
+										</div>
 									</div>
 								</div>
 								<div class="panel panel-info" style="margin-bottom: 0 !important;">
@@ -81,7 +89,7 @@
 									</div>
 								</div>
 				        	</div>
-					        <div class="col-xs-3">
+					        <div class="col-xs-2">
 					        	<div class="pull-right row">
 						        	<div class="panel panel-info">
 										<div class="panel-body" style="padding: 6px;">
