--- a/backend/src/main/webapp/app/views/product/search.html
+++ b/backend/src/main/webapp/app/views/product/search.html
@@ -52,7 +52,7 @@
 		<tbody>
 			<tr ng-repeat="u in data.products track by $index" style="color: #337AB7;">
 				<td>{{ $index + 1 + ((formData.currentPage - 1) * itemsPerPage) }}</td>
-				<td>{{ u.productName }}</td>
+				<td id="{{ u.id }}">{{ u.productName }}</td>
 				<td>
 					<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="u.enabled"></i>
 					<i class="fa  fa-minus-circle fa-lg user-status-disabled-icon" ng-hide="u.enabled"></i>
